--- a/mainapp/templates/mainapp/news.html
+++ b/mainapp/templates/mainapp/news.html
@@ -1,8 +1,16 @@
-{{% extends 'base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 
   {% with range as double_range %}
+
+    {% if page_num %}
+      <div class="card my-2">
+        <div class="card-body">
+          <p class="card-text">Текущая страница: {{ page_num }}</p>
+        </div>
+      </div>
+    {% endif %}
 
     <div class="row">
 
@@ -20,7 +28,6 @@
             </div>
           </div>
         {% endfor %}
-        30
 
       </div>
 
@@ -57,11 +64,9 @@
       <nav aria-label="Page navigation example">
         <ul class="pagination">
           <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-
-          {% for i in double_range %}
-            <li class="page-item"><a class="page-link" href="#">{{ i }}</a></li>
-          {% endfor %}
-
+          <li class="page-item"><a class="page-link" href="{% url 'mainapp:news_paginator' 1 %}">1</a></li>
+          <li class="page-item"><a class="page-link" href="{% url 'mainapp:news_paginator' page=2 %}">2</a></li>
+          {# <li class="page-item"><a class="page-link" href="{% url 'mainapp:news_paginator' three %}">3</a></li> #}
           <li class="page-item"><a class="page-link" href="#">Next</a></li>
         </ul>
       </nav>
